--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@ tagline: Supporting tagline
 ---
 {% include JB/setup %}
 
-{% include header.html %}
-{% include nav.html %}
+<!DOCTYPE html>
+<html lang="en" class="page  {{ page.page-class }}">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0">
+
+    <link rel="stylesheet" href="/assets/build/roberto.css">
+
+    <script type="text/javascript" src="//use.typekit.net/ltx5lhb.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
+</head>
+<body>
+ <header class="page-head">
+
+ 	<h1 class="epsilon">Robert Carroll is a writer, editor and programmer</h1>
+                
+    <ul class="nav nav--stacked">
+        <li><a href="/">Home</a></li><!--
+     --><li><a href="/about/">About</a></li><!--
+     --><li><a href="/blog/">Blog</a></li>
+     <li><a href="/work/">Work</a></li>
+    </ul>
+            
+</header><!-- /page-head -->
 
 Hello.
 
