Homepage template tweaks.

--- a/index.html
+++ b/index.html
@@ -5,19 +5,7 @@ tagline: Supporting tagline
 ---
 {% include JB/setup %}
 
-<!DOCTYPE html>
-<html lang="en" class="page  {{ page.page-class }}">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0">
-
-    <link rel="stylesheet" href="/assets/build/roberto.css">
-
-    <script type="text/javascript" src="//use.typekit.net/ltx5lhb.js"></script>
-	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-
-</head>
-<body>
+{% include header.html %}
  <header class="page-head">
 
  	<h1 class="epsilon">Robert Carroll is a writer, editor and programmer</h1>
@@ -31,7 +19,7 @@ tagline: Supporting tagline
             
 </header><!-- /page-head -->
 
-Hello.
+Hello number 2.
 
 {% include footer.html %}
 
