--- a/index.html
+++ b/index.html
@@ -5,21 +5,9 @@ tagline: Supporting tagline
 ---
 {% include JB/setup %}
 
-{% include header.html %}
- <header class="page-head">
+{% include nav.html %}
 
- 	<h1 class="epsilon">Robert Carroll is a writer, editor and programmer</h1>
-                
-    <ul class="nav nav--stacked">
-        <li><a href="/">Home</a></li><!--
-     --><li><a href="/about/">About</a></li><!--
-     --><li><a href="/blog/">Blog</a></li>
-     <li><a href="/work/">Work</a></li>
-    </ul>
-            
-</header><!-- /page-head -->
-
-Hello number 2.
+Hello number 3.
 
 {% include footer.html %}
 
