--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@ tagline: Supporting tagline
 {% include header.html %}
 {% include nav.html %}
 
-Hello number 3.
+<div class="main" role="main">
+	
+<div class="content">		
+
+  {% assign post = site.posts.first %}
+  {% assign content = post.content %}
+  {% include post_detail.html %}
+
+    </div>
+
+</div>  
 
 {% include footer.html %}
 
