--- a/work/index.html
+++ b/work/index.html
@@ -13,8 +13,8 @@ tagline: Supporting tagline
 <div class="content">		
 
 <h1>Work</h1>
-<ul>  {% for for post in site.categories.work %}    {% unless post.next %}      
-	<h3>{{ post.date | date: '%Y' }}</h3>    {% else %}    
+<ul>  {% for for post in site.categories.work %}        
+	<h3>{{ post.date | date: '%Y' }}</h3>      
 	  {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}    
 	    {% capture nyear %}{{ post.next.date | date: '%Y' }}{% endcapture %}    
 	      {% if year != nyear %}       
