Work category page.

--- a/work/index.html
+++ b/work/index.html
@@ -13,24 +13,23 @@ tagline: Supporting tagline
 <div class="content">		
 
 <h1>Work</h1>
-<section id="archive">
-  <h3>This year's posts</h3>
-  {%for post in site.categories.work %}
+<h2>Archives</h2>
+<ul>
+  {% for post in site.categories.work %}
+
     {% unless post.next %}
-      <ul class="this">
+      <h3>{{ post.date | date: '%Y' }}</h3>
     {% else %}
       {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
       {% capture nyear %}{{ post.next.date | date: '%Y' }}{% endcapture %}
       {% if year != nyear %}
-        </ul>
         <h3>{{ post.date | date: '%Y' }}</h3>
-        <ul class="past">
       {% endif %}
     {% endunless %}
-      <li><time>{{ post.date | date:"%d %b" }}</time><a href="{{ post.url }}">{{ post.title }}</a></li>
+
+    <li>{{ post.date | date:"%b" }} <a href="{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
-  </ul>
-</section>
+</ul>
 
     </div>
 
