Fixing up the work and blog list pages.

--- a/work/index.html
+++ b/work/index.html
@@ -10,7 +10,7 @@ tagline: Supporting tagline
 
 <div class="main" role="main">
 	
-	<div class="content">		
+	<div class="content-list">		
 
 		<h1>Work</h1>
 
