--- a/work/index.html
+++ b/work/index.html
@@ -1,9 +1,7 @@
 ---
-layout: page
-title: Hello World!
-tagline: Supporting tagline
+layout: default
+title: Work
 ---
-{% include JB/setup %}
 
 {% include header.html %}
 {% include nav.html %}
