Removed link and added link to more blog posts.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@ title: Home
   {% assign content = post.content %}
   {% include post_detail.html %}
 
+  <a href="/blog">Older posts</a>
+
     </div>
 
 </div>  
