Fixed up the headings to match the homepage and spent a while misunderstanding baseurl (ha).

--- a/work/index.html
+++ b/work/index.html
@@ -7,9 +7,7 @@ categories:
 	
 	<div class="content-list">		
 
-		<h1 class="alpha">Work</h1>
-
-	
+		<h1 class="page-heading-caps">Work</h1>
 
 		{% assign curr_year = "" %}
 	
@@ -19,7 +17,7 @@ categories:
 				
 				{% if post_year != curr_year %}
 
-					<h2 class="alpha">{{ post_year }}</h2>
+					<h2 class="page-heading-caps padding-below-half">{{ post_year }}</h2>
 			    
 			    	{% assign curr_year = post_year %}
 
