--- a/journal/index.html
+++ b/journal/index.html
@@ -7,7 +7,7 @@ categories:
 	
 	<div class="content-list">		
 
-		<h1 class="alpha">Journal</h1>
+		<h1 class="page-heading-caps padding-below-half">Journal</h1>
 
 	{% for post in site.categories.journal  %}
 
