Updated file name.

--- a/abu-dhabi/index.html
+++ b/abu-dhabi/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <p class="lh-copy f5 f3-m f1-l measure center pv4">
-      It takes about SEVEN HOURS!! so you have to be really well behaved. You get your own TV screen as well as food. Hurray!</p>
+      It takes about SEVEN HOURS! so you have to be really well behaved. You get your own TV screen as well as food. Hurray!</p>
 
     <div class="measure db center f5 f4-ns lh-copy">
       <img class="db w-100 mt4 mt5-ns" src="images/pic2.jpg">
