Funny things to do with capitals and file names

--- a/abu-dhabi/index.html
+++ b/abu-dhabi/index.html
@@ -73,7 +73,7 @@
       SEE YOU IN A FEW WEEKS! LOVE DADDY XXX</p>
 
       <div class="measure db center f5 f4-ns lh-copy">
-        <img class="db w-100 mt4 mt5-ns" src="images/pic7.jpg">
+        <img class="db w-100 mt4 mt5-ns" src="images/pic7.JPG">
       </div>
 
     </div>
