--- a/abu-dhabi/index.html
+++ b/abu-dhabi/index.html
@@ -2,10 +2,21 @@
 <html lang="en">
   <title>Welcome to Abu Dhabi</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Styles and Fonts -->
+  <script>
+    function loadCSS(e,t,n){"use strict";function r(){for(var t,i=0;i<d.length;i++)d[i].href&&d[i].href.indexOf(e)>-1&&(t=!0);t?o.media=n||"all":setTimeout(r)}var o=window.document.createElement("link"),i=t||window.document.getElementsByTagName("script")[0],d=window.document.styleSheets;return o.rel="stylesheet",o.href=e,o.media="only x",i.parentNode.insertBefore(o,i),r(),o}
+    // load a file
+    loadCSS( "//cloud.typography.com/6272432/767186/css/fonts.css");
+  </script>
+
+  <noscript><link href="//cloud.typography.com/6272432/767186/css/fonts.css" rel="stylesheet"></noscript>
   <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
+
+  <link href="/css/styles.css" rel="stylesheet">
   <body>
 
-  <article class="helvetica pb5">
+  <article class="pb5">
   <header class="vh-100 bg-light-pink dt w-100">
     <div
       style="background:url(images/cover.jpg) no-repeat center right;background-size: cover;"
