--- a/_pages/writing.html
+++ b/_pages/writing.html
@@ -7,7 +7,7 @@ categories:
 ---
 <div class="content-list">
   <h1 class="page-heading-caps padding-below-half">Writing</h1>
-  {% for post in site.writing  %}
+  {% for post in site.writing reversed %}
   <article class="work-article">
     <h1 class="work-title"><a href="{{ post.url }}">{{ post.title }}</a></h1>
     <p class="work-excerpt">{{ post.excerpt }}</p>
