Tweaks to get that journal post to show up

--- a/_pages/journal.html
+++ b/_pages/journal.html
@@ -5,7 +5,7 @@ permalink: /journal/
 categories:
 - journal
 ---
-
+test
 <div class="content-list">
   <h1 class="page-heading-caps padding-below-half">Journal</h1>
   {% for post in site.journal reversed %}
