Changed about and home to html

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 title: Home
 modified-date: 2018-03-01
 ---
-<section class="pb4">
-<h1 class="f3 ttu fw4 ttu tracked pt4 mb2">Greetings!</h1>
+<section class="pv4">
+<h1 class="f3 ttu fw4 ttu tracked mb2">Greetings!</h1>
 <p>I’m a <a href="/about" title="Find out more about Robert Carroll">writer, designer and technologist</a>.</p>
 
 <img src="/images/bill-viola-workshop.gif" alt="Image showing me and my daughter re-enacting The Dreamers by Bill Viola">
