--- a/_pages/writing.html
+++ b/_pages/writing.html
@@ -5,16 +5,14 @@ permalink: /writing/
 categories:
 - writing
 ---
-<div class="content-list">
-  <h1 class="page-heading-caps padding-below-half">Writing</h1>
+
+<div class="pv4">
+  <h1 class="f3 ttu fw4 ttu tracked mb4">Writing</h1>
   {% for post in site.writing reversed %}
-  <article class="work-article">
-    <h1 class="work-title"><a href="{{ post.url }}">{{ post.title }}</a></h1>
-    <p class="work-excerpt">{{ post.excerpt }}</p>
-  </article>
+    <article class="bt b--light-gray">
+      <h1 class="f2 lh-title mb2"><a href="{{ post.url }}" class="primary dim no-underline">{{ post.title }}</a></h1>
+      <p class="i light-silver m0">{{ post.excerpt }}</p>
+    </article>
   {% endfor %}
 </div>
-
-
-
 
