Tweaks to content styles

--- a/_pages/writing.html
+++ b/_pages/writing.html
@@ -6,7 +6,7 @@ categories:
 - writing
 ---
 
-<div class="pv4">
+<div class="pt4 pb6">
   <h1 class="f3 ttu fw4 ttu tracked mb4">Writing</h1>
   {% for post in site.writing reversed %}
     <article class="bt b--light-gray">
