Commented out the filter

--- a/_pages/work.html
+++ b/_pages/work.html
@@ -6,7 +6,7 @@ categories:
 - work
 ---
 
-  <div class="content-list">
+<div class="content-list pt4 pb6">
 
     {% for post in site.work %}
       {% for services in post.services %}
@@ -20,9 +20,10 @@ categories:
 
     <div id="list">
 
-    <h1 class="page-heading-caps padding-below-half">Work</h1>
+    <h1 class="f3 ttu fw4 ttu tracked mb4">Work</h1>
+    <p class="i light-silver m0">Work created with the help of many.</p>
 
-    <ul id="filter" class="navigation padding-below">
+<!--     <ul id="filter" class="navigation pb4">
       {% for theservice in myArray %}
       {% if theservice == '' %}
           <li id="nav-country-{{theservice | downcase | replace: ' ', '-'}}" class="no-margin-below filter"><a href="#{{theservice | downcase | replace: ' ', '-'}}">All</a></li>
@@ -31,18 +32,18 @@ categories:
       {% endif %}
       {% endfor %}
     </ul>
-
+ -->
   {% for post in site.work reversed %}
 
-      <article class="fl w-100 w-50-l pb3 pr3-l pb0-l {% for service in post.services %}{{service | downcase | replace: ' ', '-'}} {% endfor %}">
+    <article class="fl w-100 w-50-l pb3 pr3-l pb0-l {% for service in post.services %}{{service | downcase | replace: ' ', '-'}} {% endfor %}">
       <a href="{{ post.url }}">
       <div class="aspect-ratio aspect-ratio--4x3">
         <img style="background-image:url({{ post.image }});"
         class="db bg-center cover aspect-ratio--object dim" />
       </div>
       </a>
-      <a href="{{ post.url }}" class="db dim">
-        <h3 class="f5 mb0 pt2">{{ post.title }}</h3>
+      <a href="{{ post.url }}" class="db dim no-underline">
+        <h3 class="f4 lh-title mb0 pt2">{{ post.title }}</h3>
       </a>
       <p class="f6 fw4 light-silver pb3">{{ post.date | date: "%Y"  }}</p>
     </article>
@@ -51,7 +52,7 @@ categories:
 
   </div>
 </div>
-
+<!--
 
 <script>
 var currentHashNav = null;
@@ -139,14 +140,14 @@ function updateNav(hash) {
 }
 
 initHashNav(updateNav);
-
-
 </script>
 
 <style>
+
 .hidden {
   display: none;
 }
 
 </style>
 
+ -->
