Tweaks to about

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -9,9 +9,9 @@ categories:
 <h1 class="f3 ttu fw4 ttu tracked mb2">{{ page.title }}</h1>
 <p>I’m a writer, designer and technologist. I run a tiny design and development studio called <a href="https://www.wearethoughtfox.com/">We Are Thought Fox</a>.</p>
 
-<p>I’ve worked with clients big and small to build great digital products. I’m an experienced web developer who creates standards-driven CSS, HTML and JavaScript and is comfortable with mobile development, including responsive design and touch capabilities.</p>
+<p>I’ve worked with clients big and small to build great digital products. I’m an experienced web developer who creates standards-driven CSS, HTML and JavaScript and is comfortable with mobile development, including responsive design and touch capabilities. <a href="/work/">Take a look at my work.</a></p>
 
-<p>I’m also an experienced writer, editor and strategist who has led big web projects and has first-rate reporting, writing and sub-editing skills. I’ve written articles for The National, The Wire, Ultra Travel, The Guardian, Time Out and Profile magazine.</p>
+<p>I’m also an experienced writer, editor and strategist who has led big web projects and has first-rate reporting, writing and sub-editing skills. I’ve written articles for The National, The Wire, Ultra Travel, The Guardian, Time Out and Profile magazine. <a href="/writing/">Read some of my writing.</a></p>
 
 <p>I work best on the borders of editorial and technology experimenting with new forms of storytelling.</p>
 </section>
