Tweak to wording

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -7,7 +7,7 @@ categories:
 ---
 <section class="pv4">
 <h1 class="f3 ttu fw4 ttu tracked mb2">{{ page.title }}</h1>
-<p>I’m a writer, designer and technologist. I run a tiny design and development studio called <a href="https://www.wearethoughtfox.com/">We Are Thought Fox</a>.</p>
+<p>I’m a writer, designer and technologist. I run a creative technology studio called <a href="https://www.wearethoughtfox.com/">We Are Thought Fox</a>.</p>
 
 <p>I’ve worked with clients big and small to build great digital products. I’m an experienced web developer who creates standards-driven CSS, HTML and JavaScript and is comfortable with mobile development, including responsive design and touch capabilities. <a href="/work/">Take a look at my work.</a></p>
 
