--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ modified-date: 2018-03-01
 
 <section class="pb4">
 <h2 class="f3 ttu fw4 ttu tracked mb2">Work</h2>
-<p>I help bring ideas to life on the web through research, design, making and communication. I run a {{ site.description }}.</p>
+<p>I help bring ideas to life on the web through research, design, making and communication. I run {{ site.description }}.</p>
 
 <p><a href="/work" title="See some of Robert Carroll's work">See my work</a></p>
 </section>
