--- a/_pages/about.html
+++ b/_pages/about.html
@@ -9,11 +9,11 @@ categories:
 <h1 class="f3 ttu fw4 ttu tracked mb2">{{ page.title }}</h1>
 <p>I’m a writer, designer and technologist. I run a creative technology studio called <a href="https://www.wearethoughtfox.com/">We Are Thought Fox</a>.</p>
 
-<p>I’ve worked with clients big and small to build great digital products. I’m an experienced web developer who creates standards-driven CSS, HTML and JavaScript and is comfortable with mobile development, including responsive design and touch capabilities. <a href="/work/">Take a look at my work.</a></p>
+<p>Working with agility guided by user needs, I lead teams who create digital products that people enjoy using, making the most of an organisation’s resources. I have lots of experiences in discovery and alpha phases, using design methodologies to define problems and develop and test solutions. I'm also an experienced web developer who creates standards-driven CSS, HTML and JavaScript built for mobile, accessibility and performance. <a href="/work/">Take a look at my work.</a></p>
 
-<p>I’m also an experienced writer, editor and strategist who has led big web projects and has first-rate reporting, writing and sub-editing skills. I’ve written articles for The National, The Wire, Ultra Travel, The Guardian, Time Out and Profile magazine. <a href="/writing/">Read some of my writing.</a></p>
+<p>I’ve also done a fair bit of writing and editing for publications such as The National, The Wire, Ultra Travel, The Guardian, Time Out and Profile magazine. <a href="/writing/">Read some of my writing.</a></p>
 
-<p>I work best on the borders of editorial and technology experimenting with new forms of storytelling.</p>
+<p>I enjoy working on the borders of editorial and technology experimenting with new forms of storytelling and developing new ideas and approaches.</p>
 </section>
 
 
