--- a/_pages/about.html
+++ b/_pages/about.html
@@ -7,7 +7,7 @@ categories:
 ---
 <section class="pv4">
 <h1 class="f3 ttu fw4 ttu tracked mb2">{{ page.title }}</h1>
-<p>I’m a writer, designer and technologist. I run a creative technology studio called <a href="https://www.wearethoughtfox.com/">We Are Thought Fox</a>.</p>
+<p>I’m a writer, designer and technologist. I run a web design and development studio called <a href="https://www.wearethoughtfox.com/">We Are Thought Fox</a>.</p>
 
 <p>Working with agility guided by user needs, I lead teams who create digital products that people enjoy using, making the most of an organisation’s resources. I have lots of experiences in discovery and alpha phases, using design methodologies to define problems and develop and test solutions. I'm also an experienced web developer who creates standards-driven CSS, HTML and JavaScript built for mobile, accessibility and performance. <a href="/work/">Take a look at my work.</a></p>
 
