--- a/_pages/scraps.html
+++ b/_pages/scraps.html
@@ -1,18 +1,14 @@
 ---
 layout: default
-title: Journal
-permalink: /journal/
+title: Scraps
+permalink: /scrapbook/
 categories:
-- journal
+- scraps
 pagination:
   enabled: true
-  collection: journal
-  per_page: 5
-  permalink: '/page/:num/'
-  sort_reverse : true
-  debug: false
+  collection: scraps
 ---
-
+test
 <section class="mw6 mw7-ns center pa3 ph5-ns">
 
   {% for post in paginator.posts %}
