Tweak to scraps layout

--- a/_pages/scrapbook.html
+++ b/_pages/scrapbook.html
@@ -13,29 +13,29 @@ pagination:
 
   {% for post in paginator.posts %}
   <article class="pb4 mb5 blog">
-    <a href="{{ post.url }}" class="primary dim no-underline">
-      <h1 class="f2 lh-title mb3">{{ post.title }}</h1>
-    </a>
 
     <div class="f6 fw4 light-silver pb4">
       {{ post.date | date_to_long_string }}
     </div>
 
     <div class="lh-copy measure">
-
       {{post.content | markdownify}}
-
     </div>
+
+    <a href="{{ post.url }}" class="primary dim no-underline">
+      <p class="lh-title mb3">Link</h1>
+    </a>
+
   </article>
   {% endfor %}
 
   {% if paginator.total_pages > 1 %}
 
   {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' |  replace: 'index.html', '' }}" class="fl no-underline secondary underline-hover pb4">↫ Newer</a>
+    <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' |  replace: 'index.html', '' }}" class="fl no-underline underline-hover pb4">↫ Newer</a>
   {% endif %}
   {% if paginator.next_page %}
-    <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' |  replace: 'index.html', '' }}" class="fr no-underline secondary underline-hover pb4">Older ↬</a>
+    <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' |  replace: 'index.html', '' }}" class="fr no-underline underline-hover pb4">Older ↬</a>
   {% endif %}
 
 {% endif %}
