Update home layout

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -14,6 +14,10 @@ categories:
 <p>I’ve also done a fair bit of writing and editing for publications such as The National, The Wire, Ultra Travel, The Guardian, Time Out and Profile magazine. <a href="/writing/">Read some of my writing.</a></p>
 
 <p>I enjoy working on the borders of editorial and technology experimenting with new forms of storytelling and developing new ideas and approaches.</p>
+
+<img src="/images/bill-viola-workshop.gif" alt="Image showing me and my daughter re-enacting The Dreamers by Bill Viola">
+
+<figcaption class="f6 silver i pt1">I'm on the right</figcaption>
 </section>
 
 
