--- a/index.html
+++ b/index.html
@@ -1,46 +1,43 @@
 ---
 layout: default
 title: Home
-modified-date: 2018-03-01
+modified-date: 2019-10-01
 description: "Greetings! I'm a writer, designer and technologist. This is my website."
 ---
 <section class="pv4">
-<h1 class="f3 ttu fw4 ttu tracked mb2">Greetings!</h1>
-<p>I’m a <a href="/about" title="Find out more about Robert Carroll">writer, designer and technologist</a>.</p>
-
-<img src="/images/bill-viola-workshop.gif" alt="Image showing me and my daughter re-enacting The Dreamers by Bill Viola">
-
-<figcaption class="f6 silver i pt1">I'm on the right</figcaption>
-</section>
-
-<section class="pb4">
-<h2 class="f3 ttu fw4 ttu tracked mb2">Work</h2>
-<p>I help bring ideas to life on the web through research, design, making and communication. I run {{ site.description }}.</p>
-
-<p><a href="/work" title="See some of Robert Carroll's work">See my work</a></p>
+  <h1 class="f3 ttu fw4 ttu tracked mb2">Greetings!</h1>
+  <p>I’m a <a href="/about" title="Find out more about Robert Carroll">writer, designer and technologist</a> based in Yorkshire.</p>
 </section>
 
 <section class="pb4">
 <h2 class="f3 ttu fw4 ttu tracked mb2">Writing</h2>
-<p>I’ve written articles for The National, The Wire, Ultra Travel, The Guardian, Time Out and Profile magazine on subjects as diverse as&nbsp;<a href="/writing/mirror-neurons/">mirror neurons</a>,&nbsp;<a href="/writing/martin-parr">Martin Parr</a>,&nbsp;<a href="/writing/dad-matters-the-national">parenting</a>,&nbsp;<a href="/writing/mar-musa-monastery-syria">Syrian monasteries</a>&nbsp;and&nbsp;<a href="/writing/silent-disco-a-quiet-night-out">silent disco</a>.</p>
-
-<p><a href="/writing" title="See more of Robert Carroll's writing">See more writing</a></p>
-</section>
-
-<section class="pb4">
-<h2 class="f3 ttu fw4 ttu tracked mb2">Current projects</h2>
 <ul class="dash">
-  <li>A big digital project for WorldSkills</li>
-  <li>A small digital project for Amnesty</li>
-  <li>I have some availability. Please get in touch</li>
+  <li>My debut novella is called Control Alt Delete</li>
+  <li>You can <a href="/writing/short-story-competition" title="Read a short story by Robert Carroll">read Odyssey, one of my short stories</a></li>
 </ul>
 </section>
 
 <section class="pb4">
-<h2 class="f3 ttu fw4 ttu tracked mb2">Current reading</h2>
-<ul class="dash">
-  <li>The Real World of Technology by Ursula M Franklin</li>
-</ul>
+  <h2 class="f3 ttu fw4 ttu tracked mb2">$$$</h2>
+  <p>I help bring ideas to life on the web through research, design, making and communication. I run {{ site.description }}.</p>
+
+  <p><a href="/work" title="See some of Robert Carroll's work">See my work</a></p>
+</section>
+
+<section class="pb4">
+  <h2 class="f3 ttu fw4 ttu tracked mb2">Journalism</h2>
+  <p>I’ve written articles for The National, The Wire, Ultra Travel, The Guardian, Time Out and Profile magazine on subjects as diverse as&nbsp;<a href="/writing/mirror-neurons/">mirror neurons</a>,&nbsp;<a href="/writing/martin-parr">Martin Parr</a>,&nbsp;<a href="/writing/dad-matters-the-national">parenting</a>,&nbsp;<a href="/writing/mar-musa-monastery-syria">Syrian monasteries</a>&nbsp;and&nbsp;<a href="/writing/silent-disco-a-quiet-night-out">silent disco</a>.</p>
+
+  <p><a href="/writing" title="See more of Robert Carroll's writing">See more of my journalism</a></p>
+</section>
+
+<section class="pb4">
+  <h2 class="f3 ttu fw4 ttu tracked mb2">Current projects</h2>
+  <ul class="dash">
+    <li>Teaching digital skills at Ada, the National College for Digital Skills</li>
+    <li>Planning my next long fiction work</li>
+    <li>I have some availability. Please <a href="mailto:hello@wearethoughtfox.com">get in touch</a></li>
+  </ul>
 </section>
 
 <p class="sans-serif f6 pb4">Last updated {{page.modified-date | date: "%-d %B %Y"}}</p>
