--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@ description: "Greetings! I'm a writer, designer and technologist. This is my web
 
 <section class="pb4">
   <h2 class="f3 ttu fw4 ttu tracked mb2">Journalism</h2>
-  <p>I’ve written articles for The National, The Wire, Ultra Travel, The Guardian, Time Out and Profile magazine on
-    subjects as diverse as&nbsp;<a href="/writing/mirror-neurons/">mirror neurons</a>,&nbsp;<a
-      href="/writing/martin-parr">Martin Parr</a>,&nbsp;<a
-      href="/writing/dad-matters-the-national">parenting</a>,&nbsp;<a href="/writing/mar-musa-monastery-syria">Syrian
-      monasteries</a>&nbsp;and&nbsp;<a href="/writing/silent-disco-a-quiet-night-out">silent disco</a>.</p>
-
+  <p>{% include stub-journalism.html %}</p>
   <p><a href="/writing" title="See more of Robert Carroll's writing">See more of my journalism</a></p>
 </section>
 
