Remove publication from article titles

--- a/_pages/writing.html
+++ b/_pages/writing.html
@@ -10,21 +10,22 @@ categories:
 
   <div id="content" role="main">
     <section class="mw5 mw7-ns center">
-      <h1 class="f3 ttu fw4 ttu tracked mt5 mb2">{{ page.title }}</h1>
+      <h1 class="f3 ttu fw4 tracked mt5 mb2">{{ page.title }}</h1>
       <p class="lh-copy measure i light-silver m0">
         {% include stub-journalism.html %}
       </p>
     </section>
 
-    <section class="pb4 pb6-l">
+    <section class="pb4 pb5-l">
       {% include featured-writing.html %}
     </section>
 
     <section class="mw5 mw7-ns center bt b--light-gray">
-      <h2 class="f3 ttu fw4 ttu tracked mt5 mb2">Selected articles</h2>
+      <h2 class="f3 ttu fw4 ttu tracked mt5 mb4">Selected articles</h2>
       {% for post in site.writing reversed %}
-      <article class="measure">
-        <h1 class="f2 lh-title mb2"><a href="{{ post.url }}" class="primary dim no-underline">{{ post.title }}</a></h1>
+      <article class="measure pb2">
+        <time class="ttu tracked light-silver m0">{{ post.date | date: "%B %Y" }}</time>
+        <h1 class="f2 lh-title mv2"><a href="{{ post.url }}" class="primary dim no-underline">{{ post.title }}</a></h1>
         <p class="i light-silver m0">{{ post.excerpt }}</p>
       </article>
       {% endfor %}
