--- a/_pages/writing.html
+++ b/_pages/writing.html
@@ -6,10 +6,9 @@ categories:
 - writing
 ---
 
-<div class="pt4 pb6">
-
+<div class="pt4-l pb6">
   <div id="content" role="main">
-    <section class="mw5 mw7-ns center">
+    <section class="ph3 ph0-l mw7-ns center">
       <h1 class="f3 ttu fw4 tracked mt5 mb2">{{ page.title }}</h1>
       <p class="lh-copy measure i light-silver m0">
         {% include stub-journalism.html %}
@@ -20,7 +19,7 @@ categories:
       {% include featured-writing.html %}
     </section>
 
-    <section class="mw5 mw7-ns center bt b--light-gray">
+    <section class="ph3 ph0-l mw7-ns center bt b--light-gray">
       <h2 class="f3 ttu fw4 ttu tracked mt5 mb4">Selected articles</h2>
       {% for post in site.writing reversed %}
       <article class="measure pb2">
