Remove gridset overlay

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -25,5 +25,5 @@ categories:
     <img src="/images/bill-viola-workshop.gif"
         alt="Image showing me and my daughter re-enacting The Dreamers by Bill Viola">
 
-    <figcaption class="f6 silver i pt1 tr">I'm on the right</figcaption>
+    <figcaption class="f6 silver i pt1">I'm on the right</figcaption>
 </section>
